--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   width: 100%;
+  height: 12vh;
   justify-content: space-between;
   padding: 1.2rem 6.25rem;
   align-items: center;
